Expose WebKitWebView from WPEQtView

CCBUG: https://bugs.webkit.org/show_bug.cgi?id=236746