Source/WebKit/UIProcess/API/wpe/qt/WPEQtView.h
@@ -62,6 +62,8 @@ public:
     bool isLoading() const;
     bool canGoForward() const;
 
+    WebKitWebView* webView() const;
+
 public Q_SLOTS:
     void goBack();
     void goForward();
